# opentelemetry-haskell

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  cabal.project  default.nix  hie.yaml  ot-header.json  run-mega.sh  stack-8.10.1.yaml  stack-8.10.yaml  stack-8.6.5.yaml  stack-8.6.yaml  stack-8.8.1.yaml  stack-8.8.2.yaml  stack.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
eventlog-to-lightstep/: eventlog-to-lightstep.cabal
eventlog-to-lightstep/cli/: Main.hs
megaexample/: Main.hs  README.md  megaexample.cabal
opentelemetry/: LICENSE  opentelemetry.cabal
opentelemetry-api/: opentelemetry.cabal
opentelemetry-api/just-some-usage-code-that-must-compile/: SomeUsageOfImplicitApi.hs
opentelemetry-api/src/OpenTelemetry/: Common.hs  Explicit.hs  FileTracer.hs  Implicit.hs
opentelemetry-api/src/OpenTracing/API/: Common.hs  Explicit.hs
opentelemetry-eventlog/: opentelemetry-eventlog.cabal
opentelemetry-eventlog/example/: Main.hs
opentelemetry-eventlog/src/OpenTelemetry/: Eventlog.hs
opentelemetry-extra/: opentelemetry-extra.cabal
opentelemetry-extra/exe/eventlog-summary/: Main.hs
opentelemetry-extra/exe/eventlog-to-chrome/: Main.hs
opentelemetry-extra/exe/eventlog-to-opentelemetry/: Attribute.hs  Console.hs  Json.hs  Main.hs  Resource.hs  Spans.hs
opentelemetry-extra/exe/eventlog-to-opentelemetry/OpenTelemetry/: Attribute.hs  Console.hs  Json.hs  Resource.hs  Spans.hs
opentelemetry-extra/exe/eventlog-to-tracy/: Main.hs
opentelemetry-extra/exe/eventlog-to-zipkin/: Main.hs
opentelemetry-extra/exe/ot-write-benchmark/: Main.hs
opentelemetry-extra/proto/: opentelemetry-proto.cabal
opentelemetry-extra/src/OpenTelemetry/: ChromeExporter.hs  Common.hs  Debug.hs  EventlogStreaming_Internal.hs  FileExporter.hs  Handler.hs  Implicit.hs  Parser.hs  Tracer.hs  ZipkinExporter.hs
opentelemetry-extra/src/OpenTelemetry/Binary/: Parser.hs
opentelemetry-extra/src/OpenTelemetry/Text/: Parser.hs
opentelemetry-extra/unit-tests/: Arbitrary.hs  LogEventSerializer.hs  Main.hs  TestBinary.hs  TestCommon.hs  TestEventlogStreaming.hs  TestPropagation.hs
opentelemetry-http-client/: opentelemetry-http-client.cabal
opentelemetry-http-client/src/OpenTelemetry/Network/HTTP/: Client.hs
opentelemetry-lightstep/: opentelemetry-lightstep.cabal
opentelemetry-lightstep/exe/eventlog-to-lightstep/: Main.hs
opentelemetry-lightstep/just-some-usage-code-that-must-compile/: SomeUsageOfImplicitApi.hs
opentelemetry-lightstep/src/OpenTelemetry/: LightStep.hs
opentelemetry-lightstep/src/OpenTelemetry/LightStep/: Config.hs  Exporter.hs  GRPCExporter.hs  ZipkinExporter.hs
opentelemetry-lightstep/src/OpenTelemetry/Lightstep/: Config.hs  Exporter.hs
opentelemetry-proto/: opentelemetry-proto.cabal
opentelemetry-wai/: opentelemetry-wai.cabal
opentelemetry-wai/src/OpenTelemetry/Network/Wai/: Middleware.hs
opentelemetry/just-some-usage-code-that-must-compile/: Main.hs  SomeUsageOfExplicitApi.hs  SomeUsageOfImplicitApi.hs
opentelemetry/src/OpenTelemetry/: Common.hs  Eventlog.hs  Eventlog_Internal.hs  Explicit.hs  Exporter.hs  FileExporter.hs  Implicit.hs  Instruments.hs  Metrics.hs  Metrics_Internal.hs  Propagation.hs  SpanContext.hs
opentelemetry/src/OpenTelemetry/Binary/: Eventlog.hs
opentelemetry/src/OpenTelemetry/ByteString/: Eventlog.hs
opentelemetry/unit-tests/: TestCommon.hs  TestPropagation.hs
