cabal-version:       2.4
name:                eventlog-to-lightstep
description:         Stream eventlog to Lightstep
category:            OpenTelemetry
version: 0.3.0
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -ferror-spans
    -freverse-errors

executable eventlog-to-lightstep
  import: options
  ghc-options:
    -threaded
    -rtsopts
    -eventlog
  build-depends:
    base >= 4.12 && < 5,
    bytestring,
    containers,
    ghc-events >= 0.13.0,
    http-client,
    http-types,
    opentelemetry,
    opentelemetry-extra,
    opentelemetry-lightstep,
    splitmix,
    filepath,
    text,
    unordered-containers
  main-is: Main.hs
  hs-source-dirs: cli

