cabal-version:       2.4
name:                megaexample
description:         The OpenTelemetry Haskell Client (LightStep exporter) https://opentelemetry.io
category:            OpenTelemetry
version:             0.3.0
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

executable opentelemetry-megaexample
  import: options
  build-depends:
    base >= 4.12 && < 5,
    async,
    bytestring,
    exceptions,
    http-client,
    http-types,
    opentelemetry,
    opentelemetry-lightstep,
    opentelemetry-http-client,
    opentelemetry-wai,
    servant,
    text,
    wai,
    warp
  hs-source-dirs: .
  main-is: Main.hs
