cabal-version:       2.4
name:                opentelemetry
version:             0.1.0.0
license-file:        LICENSE
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

library
  build-depends:
    base >= 4.12,
    clock >= 0.8,
    random >= 1.1,
    text
  hs-source-dirs: src
  exposed-modules:
    OpenTracing.API.Common
    OpenTracing.API.Explicit
  default-language: Haskell2010
