cabal-version:       2.4
name:                opentelemetry
version:             0.1.0.0
license-file:        LICENSE
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

library
  import: options
  build-depends:
    base >= 4.12,
    clock >= 0.8,
    random >= 1.1,
    exceptions,
    text
  hs-source-dirs: src
  exposed-modules:
    OpenTelemetry.Common
    OpenTelemetry.Explicit
    OpenTelemetry.Implicit

test-suite just-some-usage-code-that-must-compile
  import: options
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  other-modules:
    SomeUsageOfImplicitApi
  hs-source-dirs: just-some-usage-code-that-must-compile
  -- NOTE: no constraints on 'foo-internal' as same-package
  --       dependencies implicitly refer to the same package instance
  build-depends:
    base,
    opentelemetry
