cabal-version:       2.4
name:                opentelemetry-eventlog
description:         OpenTelemetry API implementation that sends the telemetry data to eventlog
category:            OpenTelemetry
version: 0.3.0
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

library
  import: options
  build-depends:
    base >= 4.12 && < 5,
    bytestring,
    exceptions
  hs-source-dirs: src
  exposed-modules:
    OpenTelemetry.Eventlog

executable opentelemetry-eventlog-example
  import: options
  ghc-options:
    -threaded
    -rtsopts
    -eventlog
  build-depends:
    base >= 4.12 && < 5,
    async,
    opentelemetry-eventlog
  main-is: Main.hs
  hs-source-dirs: example

