cabal-version:       2.4
name:                opentelemetry-extra
description:         The OpenTelemetry Haskell Client https://opentelemetry.io
category:            OpenTelemetry
version: 0.4.0
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

library
  import: options
  build-depends:
    base >= 4.12 && < 5,
    aeson,
    async,
    bytestring,
    clock >= 0.8,
    containers,
    directory,
    exceptions,
    filepath,
    ghc-events,
    hashable,
    http-client,
    http-client-tls,
    http-types,
    opentelemetry >= 0.4.0,
    random >= 1.1,
    scientific,
    text-show,
    splitmix,
    stm,
    text,
    unordered-containers

  hs-source-dirs: src
  exposed-modules:
    OpenTelemetry.Common
    OpenTelemetry.Debug
    OpenTelemetry.ChromeExporter
    OpenTelemetry.EventlogStreaming_Internal
    OpenTelemetry.ZipkinExporter

test-suite unit-tests
  import: options
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  other-modules:
    TestPropagation
    TestEventlogStreaming
  hs-source-dirs: unit-tests
  build-depends:
    base,
    QuickCheck,
    bytestring,
    ghc-events,
    hashable,
    opentelemetry >= 0.4.0,
    opentelemetry-extra,
    tasty,
    tasty-discover,
    tasty-hunit,
    tasty-quickcheck,
    text,
    text-show,
    unordered-containers

executable eventlog-to-zipkin
  import: options
  main-is:    Main.hs
  hs-source-dirs: exe/eventlog-to-zipkin
  build-depends:
    base,
    async,
    exceptions,
    clock,
    filepath,
    http-client,
    http-client-tls,
    opentelemetry >= 0.4.0,
    opentelemetry-extra,
    text,
    typed-process

executable eventlog-to-chrome
  import: options
  main-is:    Main.hs
  hs-source-dirs: exe/eventlog-to-chrome
  build-depends:
    base,
    exceptions,
    clock,
    opentelemetry >= 0.4.0,
    opentelemetry-extra,
