cabal-version:       2.4
name:                opentelemetry-lightstep
description:         The OpenTelemetry Haskell Client (Lightstep exporter) https://opentelemetry.io
category:            OpenTelemetry
version: 0.8.0
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

library
  import: options
  build-depends:
    base >= 4.12 && < 5,
    async,
    bytestring,
    exceptions,
    http-client,
    http-client-tls,
    http-types,
    network,
    opentelemetry >= 0.6.1,
    opentelemetry-extra,
    scientific,
    stm,
    text,
    unordered-containers
  hs-source-dirs: src
  exposed-modules:
    OpenTelemetry.Lightstep.Config
    OpenTelemetry.Lightstep.Exporter

executable eventlog-to-lightstep
  import: options
  ghc-options:
    -threaded
    -rtsopts
    -eventlog
  build-depends:
    base >= 4.12 && < 5,
    async,
    bytestring,
    clock,
    containers,
    exceptions,
    filepath,
    ghc-events >= 0.13.0,
    http-client,
    http-types,
    opentelemetry >= 0.6.1,
    opentelemetry-extra,
    opentelemetry-lightstep,
    splitmix,
    text,
    typed-process,
    unordered-containers
  main-is: Main.hs
  hs-source-dirs: exe/eventlog-to-lightstep
