cabal-version:       2.4
name:                opentelemetry
description:         The OpenTelemetry Haskell Client https://opentelemetry.io
category:            OpenTelemetry
version: 0.8.0
license-file:        LICENSE
license:             Apache-2.0
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/opentelemetry-haskell

common options
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -fhide-source-paths
    -ferror-spans
    -freverse-errors

library
  import: options
  build-depends:
    base >= 4.12 && < 5,
    bytestring,
    ghc-trace-events >= 0.1.0.1,
    hashable,
    exceptions
  hs-source-dirs: src
  exposed-modules:
    OpenTelemetry.SpanContext
    OpenTelemetry.Propagation
    OpenTelemetry.Eventlog
    OpenTelemetry.Metrics_Internal
    OpenTelemetry.Eventlog_Internal
